# hourglass

./: Cargo.toml
hourglass_engine/: Cargo.toml
hourglass_engine/src/: ai.rs  fen.rs  gen_attacks.rs  gen_moves.rs  lib.rs  pieces.rs
hourglass_engine/src/test/: fen.rs  lib.rs  mod.rs  pieces.rs
hourglass_engine_runner/: Cargo.toml
hourglass_visual/: Cargo.toml
hourglass_visual/src/: main.rs  piece.rs  setup.rs
