[package]
name = "hourglass_visual"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10"
bevy_mod_picking = { version = "0.13.0", default_features = false, features = [
    "backend_raycast",
    "backend_bevy_ui",
    # "backend_sprite",
    "debug",
    "selection",
    "highlight",
]}
bitflags = "2.2.1"
hourglass_engine = { path = "../hourglass_engine" }
